# node_editor

./: .gitignore  .ruff_qt_overrides.txt  LICENCE  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
architecture/: 2025-12-13_observations.txt  2025-12-13_results.txt  phase_2_summary.txt  phase_3_summary.txt
docs/: 2025-12-14_stable_ids_refactor_report.md  2025_12_11_implementation_plan.md  MIGRATION_PLAN.md  README_IMPROVEMENTS.md  architecture.md  refactor_audit_and_plan.md
docs/updates/: 2025_12_10_refactoring_plan.md
examples/calculator/: addition_example.json  calc_conf.py  calc_drag_listbox.py  calc_node_base.py  calc_sub_window.py  calc_window.py  example.json  example3.json  example4  main.py  substraction_example.json
examples/calculator/nodes/: __init__.py  input.py  operations.py  output.py
examples/calculator/qss/: nodeeditor-dark.qss
examples/example_calculator/: calc_conf.py  calc_drag_listbox.py  calc_node_base.py  calc_sub_window.py  calc_window.py  main.py
examples/example_calculator/nodes/: input.py  operations.py  output.py
examples/example_calculator/qss/: nodeeditor_dark_resources.py
examples/example_test/: main.py
examples/minimal/: main.py
examples/string_processor/: main.py  reproduce_crash.py  reproduce_issue.json  str_conf.py  str_drag_listbox.py  str_node_base.py  str_sub_window.py  str_window.py  string_example.json
examples/string_processor/nodes/: __init__.py  str_input.py  str_operations.py  str_output.py
examples/string_processor/qss/: nodeeditor.qss
node_editor/: __init__.py
node_editor/core/: __init__.py  clipboard.py  edge.py  history.py  node.py  scene.py  serializable.py  socket.py
node_editor/docs/: 2025-12-15_core_qt_separation_plan.md
node_editor/edge_tools/: __init__.py
node_editor/graphics/: __init__.py  cutline.py  edge.py  edge_path.py  node.py  scene.py  socket.py  view.py
node_editor/nodes/: __init__.py  advanced_nodes.py  base.py  conversion_nodes.py  input_node.py  list_nodes.py  logic_nodes.py  math_nodes.py  output_node.py  registry.py  string_nodes.py  time_nodes.py  utility_nodes.py
node_editor/persistence/: scene_json.py
node_editor/themes/: __init__.py  base_theme.py  theme_engine.py
node_editor/themes/dark/: __init__.py
node_editor/themes/light/: __init__.py
node_editor/tools/: __init__.py  edge_dragging.py  edge_intersect.py  edge_rerouting.py  edge_snapping.py  edge_validators.py
node_editor/utils/: __init__.py  helpers.py  logging_config.py  qt_helpers.py
node_editor/widgets/: __init__.py  content_widget.py  editor_widget.py  editor_window.py
nodeeditor/: __init__.py  node_content_widget.py  node_edge.py  node_edge_dragging.py  node_edge_intersect.py  node_edge_rerouting.py  node_edge_snapping.py  node_edge_validators.py  node_editor_widget.py  node_editor_window.py  node_graphics_cutline.py  node_graphics_edge.py  node_graphics_edge_path.py  node_graphics_node.py  node_graphics_scene.py  node_graphics_socket.py  node_graphics_view.py  node_node.py  node_scene.py  node_scene_clipboard.py  node_scene_history.py  node_serializable.py  node_socket.py  utils.py
scripts/: ICONS_MAPPING.md  copy_icons.py  extract_docstrings.py  extract_full_structure.py  rename_callbacks.sh  rename_class_attrs.sh  rename_graphics_attrs.sh  rename_state_methods.sh  view_icons.py
tests/: conftest.py  test_000_import.py  test_core_edge.py  test_core_no_runtime_qt.py  test_core_node.py  test_core_scene.py  test_graphics_layer.py  test_integration_workflow.py  test_nodes_advanced.py  test_nodes_conversion.py  test_nodes_input.py  test_nodes_list.py  test_nodes_logic.py  test_nodes_math.py  test_nodes_output.py  test_nodes_registry.py  test_nodes_string.py  test_nodes_time.py  test_nodes_utility.py  test_package_imports.py  test_theme_changes.py
