[project]
name = "nodeeditor"
version = "0.9.15"
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-qt>=4.4.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "black>=24.0.0"
]
test = [
    "pytest>=8.3.5",
    "pytest-qt>=4.4.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1"
]

# --------------------------
# mypy configuration
# --------------------------
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
warn_return_any = true
warn_redundant_casts = true
exclude = '.*(backups|\.cache|temp|reports)/'  # Global exclude, only one allowed

[[tool.mypy.overrides]]
module = ["PyQt5.*"]
ignore_missing_imports = true
ignore_errors = true

# --------------------------
# Ruff configuration
# --------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
fix = true
exclude = ["backups", ".cache", "temp", "reports", "docs", "venv", "__pycache__", "*.pyc", "*.md"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PYI", # flake8-pyi
]
ignore = [
    "E501",   # line too long (handled by black)
    "N802",   # function name should be lowercase
    "F403",   # wildcard import
    "F405",   # name may be undefined
    "E402",   # module level import not at top
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "SIM102", # nested if statements
    "TC001", # typing imports should be in TYPE_CHECKING block
    "TC002", # typing imports should be in TYPE_CHECKING block
    "TC003", # typing imports should be in TYPE_CHECKING block
]

# Per-file ignores for scripts and utilities
[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["T201"]  # Allow print statements in scripts
"tests/*.py" = ["T201"]     # Allow print statements in tests
"examples/*.py" = ["T201"]  # Allow print statements in examples

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true
known-first-party = ["nodeeditor"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# --------------------------
# Pytest
# --------------------------
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --tb=short --strict-markers --strict-config"
testpaths = ["tests"]
qt_api = "pyqt5"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gui: marks tests that require GUI (skipped on CI)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:PyQt5.*"
]

# --------------------------
# Coverage
# --------------------------
[tool.coverage.run]
source = ["nodeeditor"]
omit = [
    "tests/*",
    "venv/*",
    "*/site-packages/*",
    "setup.py",
    "conftest.py",
    "examples/*",
    "*.pyc",
    "__pycache__/*"
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

# ----------------------------------------
# Black configuration
# ----------------------------------------
[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '/(\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|build|dist|backups|temp|reports)/'

# ----------------------------------------
# Pre-commit hooks configuration
# ----------------------------------------
# Note: Pre-commit configuration moved to .pre-commit-config.yaml
# ----------------------------------------
